Implement TikTok plugin functionality

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-tiktoker",
+	"name": "TikToker",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Save TikTok videos as markdown notes with embedded content and metadata.",
+	"author": "ameyxd",
+	"authorUrl": "https://github.com/ameyxd",
 	"isDesktopOnly": false
 }
